--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@ layout: default
             {% if post.subtitle %}
             <h3 class="post-subtitle">{{ post.subtitle }}</h3>
             {% else %}
-            <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
+            <h5 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h5>
             {% endif %}
           </a>
           <p class="post-meta">Posted by
@@ -47,8 +47,8 @@ layout: default
             {% else %}
             {{ site.author }}
             {% endif %}
-            on
-            {{ post.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=post.content %}            
+            <!--on
+            {{ post.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=post.content %}  -->          
           </p>
         </article>
 
