--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,12 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>
-    {% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}
+    {% if page.title %}{{ page.title | escape }} | {{ site.title | escape }}
     {% else %}{{ site.title | escape }}{% endif %}
   </title>
 
-  <meta name="description"
-    content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+  <meta name="description" content="{{ page.description | escape }}">
 
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
     type='text/css'>
@@ -28,3 +27,5 @@
 
 
 </head>
+
+<!--content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">-->
