--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>{% if page.title %}{{ page.title | escape }} | {{ site.title | escape }} Jewish history and books{% else %}{{ site.title | escape }}{% endif %}</title>
+  <title>{% if page.title %}{{ page.title}} | {{ site.title}} | Jewish history and books{% else %}{{ site.title | escape }}{% endif %}</title>
 
   <meta name="description" content="{{ page.description | escape }}">
 
