--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 
-<hr>
+<hr />
 
 <footer>
   <div class="container">
@@ -16,8 +16,7 @@
               </span>
             </a>
           </li>
-          {% endif %}
-          {% if site.twitter_username %}
+          {% endif %} {% if site.twitter_username %}
           <li class="list-inline-item">
             <a href="https://twitter.com/{{ site.twitter_username }}">
               <span class="fa-stack fa-lg">
@@ -26,8 +25,7 @@
               </span>
             </a>
           </li>
-          {% endif %}
-          {% if site.facebook_username %}
+          {% endif %} {% if site.facebook_username %}
           <li class="list-inline-item">
             <a href="https://www.facebook.com/{{ site.facebook_username }}">
               <span class="fa-stack fa-lg">
@@ -36,8 +34,7 @@
               </span>
             </a>
           </li>
-          {% endif %}
-          {% if site.linkedin_username %}
+          {% endif %} {% if site.linkedin_username %}
           <li class="list-inline-item">
             <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
               <span class="fa-stack fa-lg">
@@ -46,8 +43,7 @@
               </span>
             </a>
           </li>
-          {% endif %}
-          {% if site.github_username %}
+          {% endif %} {% if site.github_username %}
           <li class="list-inline-item">
             <a href="https://github.com/{{ site.github_username }}">
               <span class="fa-stack fa-lg">
@@ -56,8 +52,7 @@
               </span>
             </a>
           </li>
-          {% endif %}
-          {% if site.instagram_username %}
+          {% endif %} {% if site.instagram_username %}
           <li class="list-inline-item">
             <a href="https://instagram.com/{{ site.instagram_username }}">
               <span class="fa-stack fa-lg">
@@ -68,7 +63,9 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+        <p class="copyright text-muted">
+          Copyright &copy; {{ site.author }} {{ 'now' | date: "%M" }}
+        </p>
       </div>
     </div>
   </div>
