--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -64,7 +64,7 @@
           {% endif %}
         </ul>
         <p class="copyright text-muted">
-          Copyright &copy; {{ site.author }} {{ 'now' | date: "%M" }}
+          Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}
         </p>
       </div>
     </div>
